--- a/favorite/src/main/res/layout/fragment_favorite.xml
+++ b/favorite/src/main/res/layout/fragment_favorite.xml
@@ -32,9 +32,5 @@
     <include
         android:id="@+id/view_empty"
         layout="@layout/view_empty"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:visibility="gone"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
